update README.md and fix layout bug

--- a/style.css
+++ b/style.css
@@ -1151,7 +1151,7 @@ main{
     }
     #clear{
         position: absolute;
-        right: 21%;
+        right: 16%;
         background-color: transparent;
         cursor: pointer;
         visibility: hidden;
